:active pseudo class is not applied for element with display none.

Handled for display none case.

BUG=619206

Review-Url: https://codereview.chromium.org/2095833003
Cr-Commit-Position: refs/heads/master@{#402425}

Former-commit-id: 86a54a0ee007a875d44bc4aebb7a3ad5d0cfae69